infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules: #we can config multiple domains!
    - host: diegosarmiento.com #in dev, this is mock in /etc/hosts
      http:
        paths:
          - path: /posts/create
            backend:
              serviceName: posts-clusterip-srv
              servicePort: 4000
          - path: /posts
            backend:
              serviceName: query-srv
              servicePort: 4002
          - path: /posts/?(.*)/comments #Regular expression for ID
            backend:
              serviceName: comments-srv
              servicePort: 4001
          - path: /?(.*) #must be at the end, helps react for routing
            backend:
              serviceName: client-srv
              servicePort: 3000
